# kuya-bongs-car-selection-app

./: .coverage  AGENTS.md  CONTEXT-MAP.md  CONTEXT.md  LICENSE  Makefile  README.md  compose.yaml  dev.Dockerfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  vite.config.ts
deploy/: Makefile  README.md  compose.yaml
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
dynamic/: tls.yaml
flaskr/: __init__.py  admin.py  db.py
flaskr/api/: cars.py
flaskr/models/: car.py
flaskr/utils/: db.py
src/: App.tsx  data.ts  types.ts
src/admin/: .env.example  CONTEXT.md  Dockerfile  Makefile  index.html  metadata.json  nginx.conf  package.json  pnpm-lock.yaml
src/admin/src/: App.tsx  enums.ts  index.css  initialData.ts  types.ts
src/admin/src/components/: AdminLoginPage.tsx  CarCompare.tsx  CarFilterSidebar.tsx  CarGrid.tsx  (+8 more)
src/components/: AdminLoginPage.tsx  CarCard.tsx  CarDetailModal.tsx  ComparePanel.tsx  InventoryCMS.tsx  ListingDetailModal.tsx
src/server/: .env.example  .gitignore  CONTEXT.md  Dockerfile  pyproject.toml
src/server/flaskr/: __init__.py  admin.py  schema.sql
src/server/tests/: __init__.py  conftest.py  test_car_service.py  test_cars.py  test_inquiries.py  test_leads.py  test_routes.py  test_sellers.py
src/web/: .env.example  CONTEXT.md  Makefile  index.html  metadata.json  nginx.conf  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
src/web/src/: App.tsx  apiClient.ts  enums.ts  index.css  main.tsx  types.ts  vite-env.d.ts
tests/: __init__.py  conftest.py  factories.py  test_routes.py
(+47 files in other folders)
