[project]
name = "kuya-bongs-car-selection-server"
version = "0.1.0"
description = "Serves data to client-facing applications"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.3",
    "flask-cors>=6.0.2",
    "flask-login>=0.6.3",
    "flask-sqlalchemy>=3.1.1",
    "flask-talisman>=1.1.0",
    "gunicorn>=26.0.0",
    "python-dotenv>=1.2.2",
]
